# mcp-server-weather

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/mcp_server_weather/: server.py
