[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-server-weather"
version = "0.1.0"
description = "A mock weather MCP server with streamable-http transport"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]>=1.9.0",
]

[project.scripts]
mcp-server-weather = "mcp_server_weather.server:main"

[tool.setuptools.packages.find]
where = ["src"]
